examples/test/testpolicy11530.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11530
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key36: value36
      key30: value34
      key5: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value41
          key31: value2
          key47: value21
      podSelector:
        matchLabels:
          key3: value1
